fix overflow

--- a/style.css
+++ b/style.css
@@ -45,8 +45,7 @@
 }
 
 html {
-    box-sizing: border-box;
-	background: #fff;
+    background: #fff;
     padding: 0;
     margin: 0;
 }
@@ -62,13 +61,9 @@ body {
     color : #343a40;
     border: 0;
     background: #fff;
-}
-
-html,
-body {
-  position: relative;
-  height: 100%;
-  overflow-x: hidden;
+	position: relative;
+	height: 100%;
+	overflow-x: hidden;
 }
 
 a {
